[project]
name = "studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "langgraph-cli>=0.1.75",
]
